fix list overflow scrollbar

--- a/src/popup/App.css
+++ b/src/popup/App.css
@@ -4,7 +4,7 @@
 
 .app .list-group {
   max-height: 488px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .playlist-group {
